differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr15698-3.c-4.8.2-2.out.txt
pr15698-3.c: In function ‘f’:
pr15698-3.c:9:16: error: argument ‘a’ doesn’t match prototype
 void f(a) long a; {}  
                ^
pr15698-3.c:7:6: error: prototype declaration
 void f(int);  
      ^
